jilles      2006/07/02 00:08:33 UTC	(20060702-5636)
  Log:
  ChanServ UNBAN: remove unnecessary additional declaration of chanban_t *cb (2 times).
  

  Changes:	Modified:
  +2 -2		trunk/modules/chanserv/ban.c (File Modified) 


jilles      2006/07/02 00:05:59 UTC	(20060702-5634)
  Log:
  flatfile_db_save(): cast argument to %ld from time_t to long
  

  Changes:	Modified:
  +1 -1		trunk/backend/flatfile.c (File Modified) 


jilles      2006/07/01 23:55:36 UTC	(20060701-5632)
  Log:
  Add a comment to hook_channel_req_t, it is not
  possible to use mychan_t here.
  

  Changes:	Modified:
  +2 -1		trunk/include/atheme.h (File Modified) 


jilles      2006/07/01 23:52:50 UTC	(20060701-5630)
  Log:
  Make mc in hook_channel_req_t of type struct mychan_ * instead of void *.
  

  Changes:	Modified:
  +1 -2		trunk/include/atheme.h (File Modified) 


jilles      2006/07/01 23:38:42 UTC	(20060701-5628)
  Log:
  Add callbacks for non-standard type C channel modes
  (forwarding, join throttling, etc).
  

  Changes:	Modified:
  +9 -0		trunk/include/atheme.h (File Modified) 
  +1 -1		trunk/include/phandler.h (File Modified) 
  +1 -1		trunk/protocol/asuka.c (File Modified) 
  +1 -1		trunk/protocol/bahamut.c (File Modified) 
  +1 -1		trunk/protocol/bircd.c (File Modified) 
  +64 -3	trunk/protocol/charybdis.c (File Modified) 
  +1 -1		trunk/protocol/dreamforge.c (File Modified) 
  +1 -1		trunk/protocol/hybrid.c (File Modified) 
  +47 -4	trunk/protocol/hyperion.c (File Modified) 
  +54 -4	trunk/protocol/inspircd.c (File Modified) 
  +1 -1		trunk/protocol/ircnet.c (File Modified) 
  +1 -1		trunk/protocol/nefarious.c (File Modified) 
  +1 -1		trunk/protocol/plexus.c (File Modified) 
  +28 -2	trunk/protocol/ptlink.c (File Modified) 
  +1 -1		trunk/protocol/ratbox.c (File Modified) 
  +1 -1		trunk/protocol/shadowircd.c (File Modified) 
  +1 -1		trunk/protocol/solidircd.c (File Modified) 
  +1 -1		trunk/protocol/sorcery.c (File Modified) 