@@ -1,3 +1,12 @@
+jilles      2006/07/02 00:21:54 UTC	(20060702-5638)
+  Log:
+  Use channel_mode_va() to make the code less ugly.
+  
+
+  Changes:	Modified:
+  +2 -8		trunk/protocol/inspircd.c (File Modified) 
+
+
 jilles      2006/07/02 00:08:33 UTC	(20060702-5636)
   Log:
   ChanServ UNBAN: remove unnecessary additional declaration of chanban_t *cb (2 times).
